owncloud-notes (0.9)
* Security: Remove markdown support because of [XSS in markdown-js library](https://github.com/evilstreak/markdown-js/pull/52)

owncloud-notes (0.7)
* Port to ownCloud internal app framework. Additional installation of the appframework app is not needed anymore
* Require ownCloud 6.0.3

owncloud-notes (0.6)
* Use markdown-js instead of showdown for rendering markdown because showdown has XSS problems and doesn't seem to be maintained anymore
* Provide option to exclude fields when getting a single note through the API

owncloud-notes (0.5)
* Support Markdown preview when editing
* Provide option to exclude fields when getting all notes through the API
* Fix error that renders notes twice when selected

owncloud-notes (0.4)
* remove shipped flag to make it install fine in owncloud 6 and owncloud 5.13+

owncloud-notes (0.3)
* Adjust to work on ownCloud 5 after bugfix was backported
* Add a delete button

owncloud-notes (0.2)
* Move to App Framework and AngularJS
* Remember last note
* Fixed various bugs