@@ -26,10 +26,8 @@ if (!Function.prototype.bind) {
 	};
 }
 var app = angular.module('Notes', ['restangular', 'ngRoute']).
-config(['$provide', '$routeProvider', 'RestangularProvider', '$httpProvider',
-		'$windowProvider',
-	function($provide, $routeProvider, RestangularProvider, $httpProvider,
-			$windowProvider) {
+config(function($provide, $routeProvider, RestangularProvider, $httpProvider,
+                $windowProvider) {
 	// Always send the CSRF token by default
 	$httpProvider.defaults.headers.common.requesttoken = oc_requesttoken;
 
@@ -47,8 +45,8 @@ config(['$provide', '$routeProvider', 'RestangularProvider', '$httpProvider',
 			// $routeParams does not work inside resolve so use $route
 			// note is the name of the argument that will be injected into the
 			// controller
-			note: ['$route', '$q', 'is', 'Restangular',
-			function ($route, $q, is, Restangular) {
+			/* @ngInject */
+			note: function ($route, $q, is, Restangular) {
 
 				var deferred = $q.defer();
 				var noteId = $route.current.params.noteId;
@@ -63,7 +61,7 @@ config(['$provide', '$routeProvider', 'RestangularProvider', '$httpProvider',
 				});
 
 				return deferred.promise;
-			}]
+			}
 		}
 	}).otherwise({
 		redirectTo: '/'
@@ -78,8 +76,7 @@ config(['$provide', '$routeProvider', 'RestangularProvider', '$httpProvider',
 
 
 
-}]).run(['$rootScope', '$location', 'NotesModel', 'Config',
-	function ($rootScope, $location, NotesModel, Config) {
+}).run(function ($rootScope, $location, NotesModel, Config) {
 
 	// get config
 	Config.load();
@@ -102,10 +99,9 @@ config(['$provide', '$routeProvider', 'RestangularProvider', '$httpProvider',
 			$location.path('/');
 		}
 	});
-}]);
+});
 
-app.controller('AppController', ['$scope', '$location', 'is',
-	function ($scope, $location, is) {
+app.controller('AppController', function ($scope, $location, is) {
 	$scope.is = is;
 
 	$scope.init = function (lastViewedNote) {
@@ -113,10 +109,9 @@ app.controller('AppController', ['$scope', '$location', 'is',
 			$location.path('/notes/' + lastViewedNote);
 		}
 	};
-}]);
-app.controller('NoteController', ['$routeParams', '$scope', 'NotesModel',
-	'SaveQueue', 'note', 'Config',
-	function($routeParams, $scope, NotesModel, SaveQueue, note, Config) {
+});
+app.controller('NoteController', function($routeParams, $scope, NotesModel,
+                                          SaveQueue, note, Config) {
 
 	NotesModel.updateIfExists(note);
 
@@ -143,11 +138,10 @@ app.controller('NoteController', ['$routeParams', '$scope', 'NotesModel',
 		Config.sync();
 	};
 
-}]);
+});
 // This is available by using ng-controller="NotesController" in your HTML
-app.controller('NotesController', ['$routeParams', '$scope', '$location',
-	'Restangular', 'NotesModel',
-	function($routeParams, $scope, $location, Restangular, NotesModel) {
+app.controller('NotesController', function($routeParams, $scope, $location,
+                                           Restangular, NotesModel) {
 
 	$scope.route = $routeParams;
 	$scope.notes = NotesModel.getAll();
@@ -171,23 +165,38 @@ app.controller('NotesController', ['$routeParams', '$scope', '$location',
 		note.remove().then(function () {
 			NotesModel.remove(noteId);
 			$scope.$emit('$routeChangeError');
-		});	
+		});
 	};
 
-}]);
+});
 
-/**
- * Like ng-change only that it does not fire when you type faster than
- * 300 ms
- */
-app.directive('notesAutofocus', [function () {
+app.directive('notesAutofocus', function () {
     return {
         restrict: 'A',
         link: function (scope, element, attributes) {
             element.focus();
         }
     };
-}]);
+});
+
+app.directive('notesIsSaving', function ($window) {
+    return {
+        restrict: 'A',
+        scope: {
+            'notesIsSaving': '='
+        },
+        link: function (scope, element, attributes) {
+            $window.onbeforeunload = function () {
+                if (scope.notesIsSaving) {
+                    return t('notes', 'Note is currently saving. Leaving ' +
+                                      'the page will delete all changes!');
+                } else {
+                    return null;
+                }
+            };
+        }
+    };
+});
 
 app.directive('markdown', function () {
 	return {
@@ -210,7 +219,7 @@ app.directive('markdown', function () {
  * Like ng-change only that it does not fire when you type faster than
  * 300 ms
  */
-app.directive('notesTimeoutChange', ['$timeout', function ($timeout) {
+app.directive('notesTimeoutChange', function ($timeout) {
 	return {
 		restrict: 'A',
 		link: function (scope, element, attributes) {
@@ -226,16 +235,16 @@ app.directive('notesTimeoutChange', ['$timeout', function ($timeout) {
 			});
 		}
 	};
-}]);
+});
 
-app.directive('notesTooltip', [function () {
+app.directive('notesTooltip', function () {
 	return {
 		restrict: 'A',
 		link: function (scope, element, attributes) {
 			element.tooltip();
 		}
 	};
-}]);
+});
 
 /**
  * Binds translated values to scope and hides the element
@@ -252,7 +261,7 @@ app.directive('notesTranslate', function () {
 	};
 });
 
-app.factory('Config', ['Restangular', function (Restangular) {
+app.factory('Config', function (Restangular) {
     var Config = function (Restangular) {
         this._markdown = false;
         this._Restangular = Restangular;
@@ -280,7 +289,7 @@ app.factory('Config', ['Restangular', function (Restangular) {
     };
 
     return new Config(Restangular);
-}]);
+});
 app.factory('is', function () {
 	return {
 		loading: false
@@ -333,7 +342,7 @@ app.factory('NotesModel', function () {
 
 	return new NotesModel();
 });
-app.factory('SaveQueue', ['$q', function($q) {
+app.factory('SaveQueue', function($q) {
 	var SaveQueue = function () {
 		this._queue = {};
 		this._flushLock = false;
@@ -383,4 +392,4 @@ app.factory('SaveQueue', ['$q', function($q) {
 	};
 
 	return new SaveQueue();
-}]);
+});
