@@ -1,5 +1,11 @@
+owncloud-notes (1.0.0)
+* **Bugfix**: Remove flying loading icon
+* **Enhancement**: Make app ready for ownCloud 8
+* **Enhancement**: Show a spinner to signal when app is saving
+* **Enhancement**: Prevent closing the window when app is saving
+
 owncloud-notes (0.9)
-* Security: Remove markdown support because of [XSS in markdown-js library](https://github.com/evilstreak/markdown-js/pull/52)
+* **Security**: Remove markdown support because of [XSS in markdown-js library](https://github.com/evilstreak/markdown-js/pull/52)
 
 owncloud-notes (0.7)
 * Port to ownCloud internal app framework. Additional installation of the appframework app is not needed anymore
